# xllim

./: .dockerignore  .gitignore  .gitlab-ci-docker.yml  .gitlab-ci-pypi.yml  .gitlab-ci.yml  .gitmodules  Builder.dockerfile  CI_and_test_coverage.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENCE.md  LICENCE.txt  README.md  build_and_test.sh  build_lib.sh  build_lib_docker.sh  commands_cheat_sheet.sh  dataGenerationTest.cpp  example.py  jupyter.Dockerfile  learning_test.cpp  main.cpp  minimal.Dockerfile  new_example.py  pyproject.toml  requirements.txt  run.py  setup.py  sonar-project.properties  test.cpp  test_TestModel.py  test_imis.cpp  test_lib_docker.sh  xllim_cli.py
.devcontainer/: devcontainer.json  kernelo_devcontainer.Dockerfile
.github/workflows/: build_publish.yml  docker.yml  docs.yml
bindings/: functionalModel_bindings.cpp  gllim_bindings.cpp  xllim_bindings.cpp
conda-recipe/: meta.yaml
cython/: ExternalFunctionalModel.pyx  cy_dataGeneration.pyx  cy_functionalModel.pyx  cy_functionnalModel.pyx  cy_importanceSampling.pyx  cy_learningModel.pyx  cy_prediction.pyx  dataGenerationWrapper.pxd  functionalModelWrapper.pxd  functionnalModelWrapper.pxd  importanceSamplingWrapper.pxd  kernelo.pyx  learningModelWrapper.pxd  logging.pyx  my_python_objects.py  predictionWrapper.pxd
docs/doxygen/: Doxyfile
docs/source/: conf.py  index.rst  kernelo.rst
docs/sphinx/: Makefile
examples/: JSC1_BRDF.json  example.ipynb  example_hapke.ipynb
local-conda-build/: conda_build_config.yaml  meta.yaml
new_kernelo/: CMakeLists.txt  new_example.py  setup.py
new_kernelo/cpptest/: HapkeModel_test.cpp  ShkuratovModel_test.cpp  TestModel_test.cpp  utils_test.cpp
new_kernelo/cpptest/dataGeneration/: DependentGaussianStatModel_test.cpp  GaussianStatModel_test.cpp  Generator_test.cpp
new_kernelo/cpptest/functionalModel/: DataGeneration_test.cpp  ExternalPythonModel_test.cpp  HapkeModel_test.cpp  ImportanceSampling_test.cpp  ShkuratovModel_test.cpp  TestModel_test.cpp
new_kernelo/cpptest/generator/: Generator_test.cpp
new_kernelo/cpptest/integration_test/: performanceTests.cpp
new_kernelo/cpptest/xllimSolver/covariancesTest/: diagCovarianceTest.cpp  fullCovarianceTest.cpp  isoCovarianceTest.cpp
new_kernelo/cpptest/xllimSolver/estimatorTest/: emEstimator_test.cpp  jgmm_test.cpp
new_kernelo/docs/: Makefile
new_kernelo/docs/source/: conf.py  example.rst  index.rst  introduction.rst  kernelo.rst
new_kernelo/docs/sphinx/: Makefile
new_kernelo/docs/sphinx/source/: gllim.rst  index.rst  kernelo.rst
new_kernelo/docs/sphinx/source/GLLiM/: gllim_getters.rst
new_kernelo/libname.egg-info/: PKG-INFO  SOURCES.txt
new_kernelo/python/: TestModel.cpp  dataGeneration.cpp  functionalModel.cpp  gllim_binding.cpp  kernelo.cpp  script.ipynb  script_compare_with_old.ipynb  script_gllim.ipynb
new_kernelo/src/: ExternalPythonModel.cpp  FunctionalModel.hpp  HapkeModel.hpp  ShkuratovModel.cpp  ShkuratovModel.hpp  TestModel.cpp  TestModel.hpp
new_kernelo/src/dataGeneration/: test_script.cpp
new_kernelo/src/dataGeneration/generator/: GeneratorFactory.cpp  GeneratorFactory.hpp  LatinCubeGenerator.hpp  RandomGenerator.cpp  RandomGenerator.hpp  SobolGenerator.cpp  SobolGenerator.hpp
new_kernelo/src/dataGeneration/statModel/: DependentGaussianStatModel.cpp  DependentGaussianStatModel.hpp  GaussianStatModel.cpp  GaussianStatModel.hpp  StatModel.hpp
new_kernelo/src/functionalModel/: ExternalPythonModel.cpp  ExternalPythonModel.hpp  FunctionalModel.cpp  FunctionalModel.hpp  FunctionalModel_old.hpp  HapkeModel.cpp  HapkeModel.hpp  ShkuratovModel.cpp  ShkuratovModel.hpp  TestModel.cpp  TestModel.hpp  functional.cpp  functional.hpp
new_kernelo/src/generator/: Generator.hpp  LatinCubeGenerator.hpp
new_kernelo/src/logging/: logger.cpp  logger.hpp  progressBar.cpp  progressBar.hpp
new_kernelo/src/utils/: utils.cpp  utils.hpp
new_kernelo/src/xllimSolver/: emEstimator.cpp  emEstimator.hpp  factory.hpp  gllim.cpp  gllim.hpp  jgmm.cpp  jgmm.hpp
new_kernelo/src/xllimSolver/covariances/: covariance.hpp  diagCovariance.cpp  fullCovariance.cpp  isoCovariance.cpp
new_kernelo/src/xllimSolver/gllimStructures/: gllimConstraints.hpp  gllimParameters.hpp  gllimParametersArma.hpp
new_kernelo/tests/cppTests/functionalModel/: ExternalPythonModel_test.cpp  HapkeModel_test.cpp  ImportanceSampling_test.cpp  ShkuratovModel_test.cpp
new_kernelo/tests/cppTests/xllimSolver/covariancesTest/: isoCovarianceTest.cpp
new_kernelo/tests/pythonTests/: compare_with_old_notebook.ipynb  functional_model_notebook.ipynb  functional_model_script.py  gllim_notebook.ipynb  gllim_script.py
python_bindings/: HapkeModel.cpp
sphinx/: Makefile  conf.py  index.rst
src/dataGeneration/: DependentGaussianStatModel.cpp  DependentGaussianStatModel.h  GaussianStatModel.cpp  GaussianStatModel.h  GeneratorFactory.cpp  GeneratorFactory.h  GeneratorStrategy.h  LatinCubeGenerator.cpp  LatinCubeGenerator.h  RandomGenerator.cpp  RandomGenerator.h  SobolGenerator.cpp  SobolGenerator.h  StatModel.h  creators.h
src/functionalModel/: Enumeration.h  ExternalPythonModel.cpp  ExternalPythonModel.hpp  FunctionalModel.cpp  FunctionalModel.h  FunctionalModel.hpp  FunctionnalModelFactory.h  HapkeModel.cpp  HapkeModel.hpp  ShkuratovModel.hpp  TestModel.cpp  TestModel.hpp  creators.h
src/generator/: Generator.hpp  GeneratorFactory.hpp  LatinCubeGenerator.cpp  LatinCubeGenerator.hpp  RandomGenerator.cpp  RandomGenerator.hpp  SobolGenerator.cpp  SobolGenerator.hpp
src/helpersFunctions/: Helpers.cpp  Helpers.h
src/importanceSampling/: GaussianMixtureProposition.cpp  GaussianMixtureProposition.h  GaussianRegularizedProposition.cpp  GaussianRegularizedProposition.h  ISConfig.h  ISDiagnostic.h  ISProposition.h  ISResult.h  ISTarget.h  ISTargetDependent.cpp  ISTargetDependent.h  IimportanceSampler.h  Imis.cpp  Imis.h  ImportanceSampler.cpp  ImportanceSampler.h  ImportanceSamplingDiagnostic.h  ImportanceSamplingResult.h  (+1 more)
test_env/: Dockerfile  Procfile  launch.sh
valgrind/: CMakeLists.txt
xllim/: __init__.py  cli.py  utils.py
(+264 files in other folders)
